# sibdev_test_2

./: .coveragerc  .env.dev  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/currency/: cbr_client.py  cbr_daily_api_client.py  helpers.py  models.py  tasks.py
app/currency/api/: const.py  filters.py  serializers.py  urls.py  views.py
app/currency/api/tests/: test_views.py
app/currency/management/commands/: create_dev_admin.py  load_price_history.py
app/currency/migrations/: 0001_initial.py  0002_alter_currency_char_code_alter_currency_name_and_more.py  0003_usertrackedcurrency.py  0004_rename_usertrackedcurrency_usercurrency.py  0005_rename_threshold_price_usercurrency_threshold.py  0006_alter_currency_options_alter_currencyprice_options_and_more.py  0007_alter_usercurrency_unique_together.py  0008_commondata.py  0009_alter_currencyprice_currency.py
app/currency/templates/currency/email/: threshold_exceeded_email.html
app/currency/tests/: factories.py  helpers.py  mixins.py  test_cbr_client.py  test_models.py
app/tools/: helpers.py  middlewares.py
app/users/: admin.py  models.py
app/users/api/: urls.py
app/users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_managers.py
app/users/tests/: factories.py  mixins.py
deploy/: Dockerfile  entrypoint.sh  start-autotests.sh  start-celery-beat.sh  start-celery-worker.sh  start-django-app.sh
requirements/: pyproject.toml
sibdev_test_2/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
